rust/surrealdb-macros/tests/snapshots/test_query_builder__tests__multiplication_tests1-2.snap
---
source: surrealdb-macros/tests/test_query_builder.rs
expression: query1.get_bindings()
---
[
    Binding(
        (
            "_param_00000000",
            Table(
                Table(
                    "book",
                ),
            ),
        ),
    ),
    Binding(
        (
            "_param_00000000",
            Strand(
                Strand(
                    "lowo",
                ),
            ),
        ),
    ),
    Binding(
        (
            "_param_00000000",
            Table(
                Table(
                    "age",
                ),
            ),
        ),
    ),
    Binding(
        (
            "_param_00000000",
            Number(
                Int(
                    600,
                ),
            ),
        ),
    ),
    Binding(
        (
            "_param_00000000",
            Strand(
                Strand(
                    "Oyelowo",
                ),
            ),
        ),
    ),
    Binding(
        (
            "_param_00000000",
            Strand(
                Strand(
                    "Oyedayo",
                ),
            ),
        ),
    ),
]
