rust/surrealdb-macros/tests/snapshots/test_query_builder__tests__multiplication_tests1-4.snap
---
source: surrealdb-macros/tests/test_query_builder.rs
expression: query.get_bindings()
---
[
    Binding(
        (
            "_param_00000000",
            Table(
                Table(
                    "student",
                ),
            ),
        ),
    ),
    Binding(
        (
            "_param_00000000",
            Table(
                Table(
                    "student",
                ),
            ),
        ),
    ),
    Binding(
        (
            "_param_00000000",
            Table(
                Table(
                    "book",
                ),
            ),
        ),
    ),
    Binding(
        (
            "_param_00000000",
            Table(
                Table(
                    "student",
                ),
            ),
        ),
    ),
    Binding(
        (
            "_param_00000000",
            Table(
                Table(
                    "book",
                ),
            ),
        ),
    ),
    Binding(
        (
            "_param_00000000",
            Thing(
                Thing {
                    tb: "book",
                    id: Number(
                        1,
                    ),
                },
            ),
        ),
    ),
    Binding(
        (
            "_param_00000000",
            Thing(
                Thing {
                    tb: "book",
                    id: Number(
                        1,
                    ),
                },
            ),
        ),
    ),
    Binding(
        (
            "_param_00000000",
            Thing(
                Thing {
                    tb: "book",
                    id: Number(
                        1,
                    ),
                },
            ),
        ),
    ),
    Binding(
        (
            "_param_00000000",
            Table(
                Table(
                    "book",
                ),
            ),
        ),
    ),
    Binding(
        (
            "_param_00000000",
            Strand(
                Strand(
                    "lowo",
                ),
            ),
        ),
    ),
    Binding(
        (
            "_param_00000000",
            Table(
                Table(
                    "age",
                ),
            ),
        ),
    ),
    Binding(
        (
            "_param_00000000",
            Number(
                Int(
                    600,
                ),
            ),
        ),
    ),
    Binding(
        (
            "_param_00000000",
            Strand(
                Strand(
                    "Oyelowo",
                ),
            ),
        ),
    ),
    Binding(
        (
            "_param_00000000",
            Strand(
                Strand(
                    "Oyedayo",
                ),
            ),
        ),
    ),
    Binding(
        (
            "_param_00000000",
            Table(
                Table(
                    "age",
                ),
            ),
        ),
    ),
    Binding(
        (
            "_param_00000000",
            Table(
                Table(
                    "age",
                ),
            ),
        ),
    ),
    Binding(
        (
            "_param_00000000",
            Number(
                Int(
                    20,
                ),
            ),
        ),
    ),
    Binding(
        (
            "_param_00000000",
            Table(
                Table(
                    "firstName",
                ),
            ),
        ),
    ),
    Binding(
        (
            "_param_00000000",
            Number(
                Int(
                    5,
                ),
            ),
        ),
    ),
    Binding(
        (
            "_param_00000000",
            Number(
                Int(
                    10,
                ),
            ),
        ),
    ),
    Binding(
        (
            "_param_00000000",
            Table(
                Table(
                    "unoBook",
                ),
            ),
        ),
    ),
    Binding(
        (
            "_param_00000000",
            Table(
                Table(
                    "age",
                ),
            ),
        ),
    ),
    Binding(
        (
            "_param_00000000",
            Strand(
                Strand(
                    "Oyelowo",
                ),
            ),
        ),
    ),
    Binding(
        (
            "_param_00000000",
            True,
        ),
    ),
    Binding(
        (
            "_param_00000000",
            Number(
                Int(
                    150,
                ),
            ),
        ),
    ),
]
