rust/surrealdb-macros/tests/snapshots/test_query_builder__tests__multiplication_tests1.snap
---
source: surrealdb-macros/tests/test_query_builder.rs
expression: query1.to_string()
---
"SELECT * FROM book WHERE (content LIKE 'lowo' AND age >= 600) OR (firstName = 'Oyelowo') AND (lastName = 'Oyedayo') GROUP BY content, age ORDER BY lastName  DESC LIMIT 50 START AT 20 TIMEOUT 15 PARALLEL;"
