rust/surrealdb-macros/tests/snapshots/test_query_builder__tests__multiplication_tests2-2.snap
---
source: surrealdb-macros/tests/test_query_builder.rs
expression: x.get_bindings()
---
[
    Binding {
        param: "_param_00000000",
        value: Number(
            Int(
                18,
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "18",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Number(
            Int(
                150,
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "150",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Number(
            Int(
                3422,
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "3422",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Thing(
            Thing {
                tb: "book",
                id: String(
                    "blaze",
                ),
            },
        ),
        original_inline_name: "_param_00000000",
        raw_string: "book:blaze",
        description: None,
    },
]
