rust/surrealdb-macros/tests/snapshots/test_query_builder__tests__multiplication_tests2.snap
---
source: surrealdb-macros/tests/test_query_builder.rs
expression: x
---
student[WHERE _param_00000000 < age < _param_00000000]student->writes[WHERE timeWritten > $_param_00000000]->book[WHERE id = $_param_00000000]
