rust/surrealdb-macros/tests/snapshots/test_query_builder__tests__relate_query.snap
---
source: surrealdb-macros/tests/test_query_builder.rs
expression: relate_more.to_string()
---
"RELATE (SELECT * FROM student)->writes->(SELECT * FROM book WHERE title ~ $_param_43bccd24) CONTENT $_param_b01fd125 ;"
