rust/surrealdb-macros/tests/snapshots/test_query_builder__tests__relate_query_building_for_subqueries-2.snap
---
source: surrealdb-macros/tests/test_query_builder.rs
expression: relation.get_bindings()
---
[
    Binding {
        param: "_param_00000000",
        value: Table(
            Table(
                "student",
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "student",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Table(
            Table(
                "book",
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "book",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Strand(
            Strand(
                "Oyelowo",
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "'Oyelowo'",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Object(
            Object(
                {
                    "in": Null,
                    "out": Null,
                    "timeWritten": Object(
                        Object(
                            {
                                "nanos": Number(
                                    Int(
                                        0,
                                    ),
                                ),
                                "secs": Number(
                                    Int(
                                        52,
                                    ),
                                ),
                            },
                        ),
                    ),
                },
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "{ in: NULL, out: NULL, timeWritten: { nanos: 0, secs: 52 } }",
        description: None,
    },
]
