rust/surrealdb-macros/tests/snapshots/test_query_builder__tests__should_display_actual_values_in_raw_format.snap
---
source: surrealdb-macros/tests/test_query_builder.rs
expression: x
---
RELATE student:1->writes->book:2 CONTENT { timeWritten: ⟨12⟩:0 } RETURN BEFORE PARALLEL ;
