rust/surrealdb-macros/tests/snapshots/test_query_builder__tests__should_display_params_in_mock-2.snap
---
source: surrealdb-macros/tests/test_query_builder.rs
expression: mock.get_bindings()
---
[
    Binding {
        param: "_param_00000000",
        value: Thing(
            Thing {
                tb: "student",
                id: Number(
                    1,
                ),
            },
        ),
        original_inline_name: "_param_00000000",
        raw_string: "student:1",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Thing(
            Thing {
                tb: "book",
                id: Number(
                    2,
                ),
            },
        ),
        original_inline_name: "_param_00000000",
        raw_string: "book:2",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Object(
            Object(
                {
                    "timeWritten": Thing(
                        Thing {
                            tb: "12",
                            id: Number(
                                0,
                            ),
                        },
                    ),
                },
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "{ timeWritten: ⟨12⟩:0 }",
        description: None,
    },
]
